fix: turn off dark mode on print

--- a/apps/main/src/index.css
+++ b/apps/main/src/index.css
@@ -55,6 +55,13 @@ h1 {
     overflow: visible !important;
     -webkit-print-color-adjust: exact;
     position: absolute;
+    color: #213547;
+    background-color: #ffffff;
+  }
+  .dark,
+  .light {
+    color: #213547;
+    background-color: #ffffff;
   }
   .no-print {
     display: none;
